src/test/resources/invalid/typecheck/Super_NoParent.vas
class Main is
    this() is
        super
    end
end